# iced-web-app

./: .gitignore  BRAIN_DESIGN.rs  CLAUDE.md  COMPARISON.md  Cargo.toml  FEATURES.md  KTX2.md  QUICKSTART.md  README.md  package.json  server.ts
public/: iced_web_app.d.ts  iced_web_app.js  iced_web_app_bg.wasm  iced_web_app_bg.wasm.d.ts  index.html
scripts/: build-wasm.sh  generate_ktx2.sh  install_ktx_software.sh
src/: main.rs  texture.rs
